# MusicRank

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
data/: release-date-report.csv  songs.csv
docs/superpowers/plans/: 2026-06-15-song-ranking-implementation.md
docs/superpowers/specs/: 2026-06-15-song-ranking-design.md
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.h
src/database/: MusicDatabase.cpp  MusicDatabase.h
src/domain/: Playlist.h  Song.h
src/ui/: MainWindow.cpp  MainWindow.h  SongDialog.cpp  SongDialog.h
tests/: CMakeLists.txt  TestMainWindow.cpp  TestMusicDatabase.cpp  TestSongDomain.cpp
tools/: bootstrap-toolchain.ps1  build.ps1  enrich-release-dates-musicbrainz.py  prepare-library.ps1
